# dynamic_disagreeing_neighbors

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
data/preprocessed/: a9a.parquet  analcatdata_lawsuit.parquet  appendicitis.parquet  australian.parquet  backache.parquet  banknote.parquet  breastcancer.parquet  bupa.parquet  cleve.parquet  cod-rna.parquet  colon-cancer.parquet  dermatology-6.parquet  diabetes.parquet  ecoli-0-1-4-6_vs_5.parquet  ecoli-0-1-4-7_vs_2-3-5-6.parquet  ecoli1.parquet  ecoli2.parquet  ecoli3.parquet  ecoli4.parquet  flare.parquet  fourclass.parquet  german_numer.parquet  glass0.parquet  glass1.parquet  glass2.parquet  glass4.parquet  glass6.parquet  haberman.parquet  heart.parquet  housevotes84.parquet  ilpd.parquet  ionosphere.parquet  kr_vs_kp.parquet  liver-disorders.parquet  mammographic.parquet  mushroom.parquet  new-thyroid1.parquet  newthyroid2.parquet  page-blocks-1-3_vs_4.parquet  page-blocks0.parquet  (+25 more)
data/results/: complexity_data.parquet  complexity_sota_data.parquet  df_description_data.parquet  differences_data.parquet  performance_data.parquet  performance_data_agnostic.parquet  performance_detailed_data.parquet  score_differences_all_data.parquet  score_differences_data.parquet  score_differences_sota_data.parquet
notebooks/: 1_data_description.ipynb  2_dynamic_neighbour.ipynb  3_artificial_data.ipynb  4_comparison_of_complexity_measures_cv_vs_global.ipynb  5_k_sensitivity.ipynb  6_best_complexity_across_proportion.ipynb  7_best_complexity_across_proportion_sota.ipynb  artificial_data.ipynb  best_complexity_across_proportion.ipynb  comparison_of_complexity_measures_cv_vs_global.ipynb  complexity_across_complexity_category.ipynb  complexity_across_models_and_imbalance.ipynb  complexity_across_models_and_imbalance_all.ipynb  complexity_across_models_and_imbalance_best_only.ipynb  data_description.ipynb  k_sensitivity.ipynb
results/: timing_experiment_results_10_1.csv  timing_experiment_results_10_3.csv  timing_experiment_results_10_5.csv  timing_experiment_results_10_7.csv
results/analysis/: m_greater_than_1_stats.json
results/complexity/: a9a.json  analcatdata_lawsuit.json  appendicitis.json  australian.json  backache.json  banknote.json  breastcancer.json  bupa.json  cleve.json  cod-rna.json  colon-cancer.json  dermatology-6.json  diabetes.json  ecoli-0-1-4-6_vs_5.json  ecoli-0-1-4-7_vs_2-3-5-6.json  ecoli1.json  ecoli2.json  ecoli3.json  ecoli4.json  flare.json  fourclass.json  german_numer.json  glass0.json  glass1.json  glass2.json  glass4.json  glass6.json  haberman.json  heart.json  housevotes84.json  ilpd.json  ionosphere.json  kr_vs_kp.json  liver-disorders.json  mammographic.json  mushroom.json  new-thyroid1.json  newthyroid2.json  page-blocks-1-3_vs_4.json  page-blocks0.json  (+25 more)
results/complexity_sota/: a9a.json  analcatdata_lawsuit.json  appendicitis.json  australian.json  backache.json  banknote.json  breastcancer.json  bupa.json  cleve.json  cod-rna.json  colon-cancer.json  dermatology-6.json  diabetes.json  ecoli-0-1-4-6_vs_5.json  ecoli-0-1-4-7_vs_2-3-5-6.json  ecoli1.json  ecoli2.json  ecoli3.json  ecoli4.json  flare.json  fourclass.json  german_numer.json  glass0.json  glass1.json  glass2.json  glass4.json  glass6.json  haberman.json  heart.json  housevotes84.json  ilpd.json  ionosphere.json  kr_vs_kp.json  liver-disorders.json  mammographic.json  mushroom.json  new-thyroid1.json  newthyroid2.json  page-blocks-1-3_vs_4.json  page-blocks0.json  (+25 more)
results/performance/accuracy_score/: a9a.json  analcatdata_lawsuit.json  appendicitis.json  australian.json  backache.json  banknote.json  breastcancer.json  bupa.json  cleve.json  cod-rna.json  colon-cancer.json  dermatology-6.json  diabetes.json  ecoli-0-1-4-6_vs_5.json  ecoli-0-1-4-7_vs_2-3-5-6.json  ecoli1.json  ecoli2.json  ecoli3.json  ecoli4.json  flare.json  fourclass.json  german_numer.json  glass0.json  glass1.json  glass2.json  glass4.json  glass6.json  haberman.json  heart.json  housevotes84.json  ilpd.json  ionosphere.json  (+33 more)
src/: utils.py
src/data/: compute_tidy_results.py  tidy_data.py
src/dynamic_disagreeing_neighbors/: utils.py
src/experiments/: compute_data_complexity.py  compute_performance.py  compute_performance_accuracy.py  compute_performance_f1.py  compute_performance_gps.py  compute_performance_mcc.py  data_complexity.py  k_sensitivity.py  preprocess_data.py  preprocess_data_csv.py
src/results/: compute_tidy_results.py  statistical_analysis.py  tidy_data.py
src/visualization/: plots.py
(+206 files in other folders)
