[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Nombre corregido para publicación
name = "dynamic-disagreeing-neighbors"
version = "0.1.0"
description = "Dynamic Disagreeing Neighbors: A complexity measure for classification."
authors = [
    { name = "Víctor Aceña" }
]
license = { file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "scipy>=1.10",
    "ipykernel>=6.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.13",
    "seaborn>=0.12",
    "pyarrow>=12.0"
]
keywords = ["machine-learning", "classification", "complexity-measures", "data-analysis", "supervised-problems", "data-complexity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
maintainers = [
    { name = "Víctor Aceña", email = "victor.acena@urjc.es" }
]

[project.urls]
homepage = "https://github.com/Vacek-Ace/dynamic_disagreeing_neighbors"
repository = "https://github.com/Vacek-Ace/dynamic_disagreeing_neighbors.git"
bug-tracker = "https://github.com/Vacek-Ace/dynamic_disagreeing_neighbors/issues"

[tool.setuptools]
# Descubre automáticamente el paquete principal
packages = { find = {} }

[tool.setuptools.package-data]
dynamic_disagreeing_neighbors = [
    "data/*",
    "images/*"
]
